--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,28 +4,51 @@ on:
   push:
     branches: ["main"]
   schedule:
-    - cron: "0 6 * * 1"
+    - cron: "0 6 * * 1"   # ponedjeljkom u 06:00 UTC
   workflow_dispatch:
 
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
 
-      - uses: r-lib/actions/setup-r@v2
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup R (with RSPM binaries)
+        uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
 
+      - name: Setup Quarto
+        uses: quarto-dev/quarto-actions/setup@v2
+
+      # Ako koristiš renv, ovaj korak instalira pakete prema renv.lock
       - name: Restore renv
         uses: r-lib/actions/setup-renv@v2
+        with:
+          cache-version: 1
 
-      - uses: quarto-dev/quarto-actions/setup@v2
+      # Ako NE koristiš renv, odkomentiraj blok ispod i makni 'Restore renv' korak.
+      # - name: Install R packages (no renv)
+      #   uses: r-lib/actions/setup-r-dependencies@v2
+      #   with:
+      #     extra-packages: |
+      #       any::knitr
+      #       any::eurostat
+      #       any::dplyr
+      #       any::tidyr
+      #       any::readr
+      #       any::ggplot2
+      #       any::scales
+      #       any::purrr
+      #       any::janitor
+      #       any::stringr
 
       - name: Render site
         run: quarto render
 
-      - name: Publish to GitHub Pages
+      - name: Publish to GitHub Pages (gh-pages)
         uses: quarto-dev/quarto-actions/publish@v2
         with:
           target: gh-pages
