--- a/.github/workflows/render-publish.yml
+++ b/.github/workflows/render-publish.yml
@@ -15,24 +15,33 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup R (with RSPM binaries)
+      - name: Setup R (RSPM binaries)
         uses: r-lib/actions/setup-r@v2
         with:
-          r-version: "PUT_R_VERSION_HERE"   # npr. "4.4.1" prema renv.lock
-          use-public-rspm: true
+          use-public-rspm: true      # binarni CRAN paketi (nema kompilacije)
 
       - name: Setup Quarto
         uses: quarto-dev/quarto-actions/setup@v2
 
-      - name: System libs for source builds
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential libssl-dev libcurl4-openssl-dev libxml2-dev
+      # Ako .Rprofile automatski aktivira renv, ovo ga gasi na CI
+      - name: Disable renv autoloader
+        run: echo "RENV_CONFIG_AUTOLOADER_ENABLED=false" >> $GITHUB_ENV
 
-      - name: Restore renv
-        uses: r-lib/actions/setup-renv@v2
+      # Instaliraj potrebne R pakete bez renv-a
+      - name: Install R packages
+        uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          cache-version: 1
+          extra-packages: |
+            any::knitr
+            any::eurostat
+            any::dplyr
+            any::tidyr
+            any::readr
+            any::ggplot2
+            any::scales
+            any::purrr
+            any::janitor
+            any::stringr
 
       - name: Render site
         run: quarto render
