--- a/.github/workflows/render-publish.yml
+++ b/.github/workflows/render-publish.yml
@@ -24,8 +24,7 @@ jobs:
       - name: Setup Quarto
         uses: quarto-dev/quarto-actions/setup@v2
 
-      # ako .Rprofile aktivira renv, ugasi ga na CI
-      - name: Disable renv autoloader
+      - name: Disable renv autoloader (if any)
         run: echo "RENV_CONFIG_AUTOLOADER_ENABLED=false" >> $GITHUB_ENV
 
       - name: Install R packages (no renv)
@@ -43,8 +42,17 @@ jobs:
             any::janitor
             any::stringr
 
+      - name: Smoke test packages
+        run: |
+          Rscript -e "pkgs <- c('eurostat','dplyr','tidyr','readr','ggplot2','scales','purrr','janitor','stringr'); for(p in pkgs){suppressPackageStartupMessages(library(p, character.only=TRUE))}; sessionInfo(); cat('\nOK: packages loaded\n')"
+
       - name: Render site
         run: quarto render
+
+      - name: Sanity check output
+        run: |
+          test -d _site || (echo '_site missing' && exit 1)
+          ls -la _site
 
       - name: Publish to GitHub Pages (gh-pages)
         uses: peaceiris/actions-gh-pages@v4
