Add Eurostat release calendar page

--- a/.github/workflows/render-publish.yml
+++ b/.github/workflows/render-publish.yml
@@ -44,6 +44,10 @@ jobs:
             any::purrr
             any::janitor
             any::stringr
+            any::lubridate
+            any::ical
+            any::htmltools
+            any::jsonlite
 
       - name: Render site
         run: quarto render
