--- a/_quarto.yml
+++ b/_quarto.yml
@@ -21,15 +21,15 @@ website:
           - href: usluge-turizam.qmd
             text: Usluge i turizam
           - href: dugorocni-trendovi.qmd
-            text: DugoroŽ›ni trendovi
-      - text: Tr‘–i‘óte rada
+            text: Dugoročni trendovi
+      - text: Tržište rada
         menu:
           - href: zaposlenost.qmd
             text: Zaposlenost
           - href: nezaposlenost.qmd
             text: Nezaposlenost
           - href: place.qmd
-            text: PlaŽÅe
+            text: Plaće
           - href: produktivnost.qmd
             text: Produktivnost
       - text: Cijene i inflacija
@@ -41,7 +41,7 @@ website:
           - href: komponente-cijena.qmd
             text: Komponente cijena
           - href: proizvodjacke-cijene.qmd
-            text: ProizvoŽ'aŽ›ke cijene
+            text: Proizvođačke cijene
       - text: Financijski pokazatelji
         menu:
           - href: kamatne-stope.qmd
@@ -49,13 +49,13 @@ website:
           - href: prinosi-obveznica.qmd
             text: Prinosi obveznica
           - href: tecajevi.qmd
-            text: TeŽ›ajevi
+            text: Tečajevi
           - href: monetarni-agregati.qmd
             text: Monetarni agregati
       - text: Energija i klima
         menu:
           - href: co2-ets.qmd
-            text: Cijena COƒ'' ETS
+            text: Cijena CO₂ ETS
           - href: cijene-energije.qmd
             text: Cijene energije
           - href: emisije-sektori.qmd
